[gd_scene load_steps=6 format=3 uid="uid://cyfyqfyggd324"]

[ext_resource type="LabelSettings" uid="uid://c57087kb6t0iv" path="res://assets/LG_white_48.tres" id="1_aotm5"]
[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_qplt3"]
[ext_resource type="Texture2D" uid="uid://dqxn5fmiyo68i" path="res://assets/items/pixel heart 2.png" id="2_f5xvx"]
[ext_resource type="LabelSettings" uid="uid://b2dyrr3deoxuq" path="res://assets/LG_blue_64.tres" id="3_mcpxj"]
[ext_resource type="LabelSettings" uid="uid://dwoj7dgthifc0" path="res://assets/LG_white_24.tres" id="4_y3ruu"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qplt3")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBC" type="HBoxContainer" parent="MC"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MC/HBC"]
layout_mode = 2
size_flags_horizontal = 3
text = "000"
label_settings = ExtResource("1_aotm5")

[node name="HBCHearts" type="HBoxContainer" parent="MC/HBC"]
layout_mode = 2

[node name="H1" type="TextureRect" parent="MC/HBC/HBCHearts"]
layout_mode = 2
texture = ExtResource("2_f5xvx")
stretch_mode = 4

[node name="H2" type="TextureRect" parent="MC/HBC/HBCHearts"]
layout_mode = 2
texture = ExtResource("2_f5xvx")
stretch_mode = 4

[node name="H3" type="TextureRect" parent="MC/HBC/HBCHearts"]
layout_mode = 2
texture = ExtResource("2_f5xvx")
stretch_mode = 4

[node name="H4" type="TextureRect" parent="MC/HBC/HBCHearts"]
layout_mode = 2
texture = ExtResource("2_f5xvx")
stretch_mode = 4

[node name="H5" type="TextureRect" parent="MC/HBC/HBCHearts"]
layout_mode = 2
texture = ExtResource("2_f5xvx")
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00392157, 0.0980392, 0.866667)

[node name="VBCLevelComplete" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -46.5
offset_right = 229.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBCLevelComplete"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("3_mcpxj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBCLevelComplete"]
layout_mode = 2
text = "Press Jump to go to next level"
label_settings = ExtResource("4_y3ruu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBCGameOver" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -46.5
offset_right = 229.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBCGameOver"]
layout_mode = 2
text = "GAME OVER"
label_settings = ExtResource("3_mcpxj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBCGameOver"]
layout_mode = 2
text = "Press Jump to go to main menu"
label_settings = ExtResource("4_y3ruu")
horizontal_alignment = 1
vertical_alignment = 1
